--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlipFlop</title>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=East+Sea+Dokdo&family=Great+Vibes&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
    <header>
