--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <div class="jumbotron">
     <h1>Welcome</h1>
     <!-- <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p> -->
-    <a class="button" href="#">PLay Now</a>
+    <a class="button" href="/game.html">PLay Now</a>
   </div>
     
    
