--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <h1 class="head">Flip<span>Flop</span></h1>
        <nav> 
            <ul class="navbar-ul">
-                <a href="/index.html">
+                <a href="index.html">
                     <li class="navbar-li">
                         Home
                     </li>
                 </a> 
-                <a href="/game.html">
+                <a href="game.html">
                     <li class="navbar-li">
                         Login 
                     </li>
                 </a>   
-                <a href="/about.html">
+                <a href="about.html">
                     <li class="navbar-li">
                         About
                     </li>
@@ -33,7 +33,7 @@
    <div class="jumbotron">
     <h1>Welcome</h1>
     <!-- <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p> -->
-    <a class="button" href="/game.html">PLay Now</a>
+    <a class="button" href="game.html">PLay Now</a>
   </div>
     
    
